Get 10-block users
